--- a/styles.css
+++ b/styles.css
@@ -9,24 +9,44 @@
 */
 
 /* Importacion del reset para los exploradores */
-@import url(assets/css/reset.css);
+@import url('assets/css/reset.css');
 
-/* Estilos custom */
+/* Variables */
 :root {
+    /* Colores */
     --blanco: #fafafa;
     --negro: #101020;
     --verde: #02E2BA;
+    --morado: #4A02E2;
+    --gris-claro: #eee;
+    --gris-oscuro: #ddd;
+
+    /* Tipografía */
     --font-family: "Press Start 2P", system-ui;
+    --font-size-base: 10px;
+    --font-size-large: 2rem;
+    --font-size-medium: 1.1em;
+    --font-size-small: 0.7rem;
+
+    /* Tamaños y Espacios */
     --radius: 5px;
+    --padding-base: 1rem;
+    --margin-base: 1.5rem;
+    --margin-large: 2.5rem;
+
+    /* Ancho de las Tarjetas */
+    --card-width: calc(var(--font-size-base) * 15);
+    /* Ejemplo de cálculo */
+    --card-width-large: calc(var(--font-size-base) * 20);
 }
 
 /* Body */
 body {
-    background-image: url(assets/images/fondo_tile.png);
+    background-image: url('assets/images/fondo_tile.png');
     background-repeat: repeat;
     color: var(--negro);
     font-family: var(--font-family);
-    font-size: 10px;
+    font-size: var(--font-size-base);
     font-style: normal;
     font-weight: 400;
     margin: 0;
@@ -38,10 +58,18 @@ body {
 }
 
 .margin-y {
-    margin-bottom: 1.5rem;
-    margin-top: 1.5rem;
+    margin-bottom: var(--margin-base);
+    margin-top: var(--margin-base);
 }
 
+.margin-y-0{
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.txt-center{
+    text-align: center;
+}
 /* Header */
 header {
     background-color: var(--blanco);
@@ -57,18 +85,14 @@ header {
     justify-content: space-between;
     margin: 0 auto;
     max-width: 1200px;
-}
-
-.menu a {
-    color: #111;
-    font-weight: bold;
-    text-decoration: none;
-    white-space: nowrap;
+    font-size: x-large;
 }
 
 .menu-btn {
     cursor: pointer;
+    min-width: 50px;
 }
+
 
 .menu-items {
     display: none;
@@ -80,7 +104,7 @@ header {
 }
 
 .menu-items.active {
-    animation: slideDown .3s ease;
+    animation: slideDown 0.3s ease;
     display: flex;
 }
 
@@ -88,9 +112,16 @@ header {
     border: 1px solid;
     border-radius: var(--radius);
     display: block;
-    margin-bottom: 1rem;
-    padding: 0.5rem 0.7rem;
+    margin-bottom: var(--margin-base);
+    padding: var(--padding-base) 0.7rem;
     width: 100%;
+}
+
+.menu-items a {
+    color: #111;
+    font-weight: bold;
+    text-decoration: none;
+    white-space: nowrap;
 }
 
 .view-menu {
@@ -102,11 +133,14 @@ header {
 @keyframes slideDown {
     from {
         opacity: 0;
-        transform: translateY(-10px); /* Desplazamiento inicial hacia arriba */
+        transform: translateY(-10px);
+        /* Desplazamiento inicial hacia arriba */
     }
+
     to {
         opacity: 1;
-        transform: translateY(0); /* Sin desplazamiento final */
+        transform: translateY(0);
+        /* Sin desplazamiento final */
     }
 }
 
@@ -116,26 +150,29 @@ header {
     color: #000;
     display: flex;
     font-weight: bold;
-    gap: 0.5rem; /* Espacio entre el ícono y el texto */
+    gap: 0.5rem;
+    /* Espacio entre el ícono y el texto */
     text-decoration: none;
+    word-wrap: inherit
 }
 
 /* Main */
 main {
     background-color: var(--blanco);
-    border: 10px solid #eee;
+    border: 10px solid var(--gris-claro);
     display: block;
     margin: 3rem auto;
     padding: 3rem 1rem;
 }
 
-main>div{
+main>div {
     margin: auto;
     max-width: 900px;
 }
+
 /* Footer */
 footer {
-    font-size: 1.1em;
+    font-size: var(--font-size-medium);
     font-weight: bold;
     text-align: center;
 }
@@ -169,21 +206,38 @@ footer {
     display: block;
     font-weight: bold;
     gap: 10px;
+    font-size: var(--font-size-large);
     justify-content: center;
     margin: 1rem auto;
-    padding: 16px 20px;
-    transition: all .2s ease-out;
+    padding: 1rem 1.6rem;
+    width: fit-content;
+    transition: all 0.2s ease-out;
 }
 
 .btn:hover {
     filter: brightness(0.85);
 }
 
-.btn:disabled{
-    opacity: .8;
+.btn:disabled {
+    opacity: 0.8;
     background-color: gray;
     border-color: lightgray;
     color: darkgray;
+}
+
+/* Card */
+.card {
+    background-color: var(--blanco);
+    border: 5px solid var(--gris-claro);
+    border-radius: var(--radius);
+    cursor: pointer;
+    padding: .8rem 1.2rem;
+
+    transition: all ease .3s;
+}
+
+.card:hover{
+    background-color: var(--gris-claro);
 }
 
 /* Autor Card */
@@ -195,13 +249,10 @@ footer {
 }
 
 .autor_avatar {
-    border: 2px solid #eee;
-    border-radius: var(--radius);
     display: flex;
     flex-direction: column;
     gap: 10px;
     max-width: 250px;
-    padding: 10px 15px;
     text-align: center;
 }
 
@@ -217,10 +268,11 @@ footer {
     list-style-type: none;
     margin: 0 auto;
     margin-block-start: 0;
-    padding-inline-start: 0; /* Esto es por el explorador */
+    padding-inline-start: 0;
+    /* Esto es por el explorador */
 }
 
-.autor_avatar ul > li > a {
+.autor_avatar ul>li>a {
     display: block;
     padding: 0.5em;
 }
@@ -231,18 +283,20 @@ footer {
     width: fit-content;
 }
 
-
-/* nombre */
-.nombre-container{
+/* Nombre */
+.nombre-container {
     margin: 2rem auto;
 }
-.nombre-container input[type="text"]{
-    padding:20px;
+
+.nombre-container input[type="text"] {
+    padding: 20px;
     display: block;
     margin: 5px auto;
-    width: max-content;
+    max-width:100%;
     border: 5px solid var(--verde);
+    font-size: 1rem; /* Para evitar zoom en dispositivos móviles */
 }
+
 /* Selección de Pokémon */
 .pokemon-container {
     display: flex;
@@ -253,18 +307,12 @@ footer {
 }
 
 .pokemon-card {
-    background-color: var(--blanco);
-    border: 5px solid #ddd;
-    border-radius: var(--radius);
-    cursor: pointer;
-    padding: 20px;
+   
     text-align: center;
-    transition: transform 0.3s, box-shadow 0.3s;
-    width: 150px;
+    width: var(--card-width);
 }
 
 .pokemon-card:hover {
-    background-color: #eee;
     transform: scale(1.01);
 }
 
@@ -277,6 +325,82 @@ footer {
     background-color: var(--verde);
     border-color: var(--negro);
 }
+
+.pokemon-card p.tipo {
+    padding: 0.3rem 0.7rem;
+    font-size: var(--font-size-small);
+    box-sizing: content-box;
+    color: var(--blanco);
+    border-radius: calc(var(--radius) * 5);
+    background-color: var(--morado);
+}
+
+.marcador {
+    border: red solid 1px;
+    display: flex;
+    gap: 1rem;
+    justify-content: space-between;
+    padding: 10px 20px;
+    text-align: center;
+}
+.marcador .heading{
+    color: var(--negro);
+    font-weight: bold;
+}
+
+.options{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    gap: 1rem;
+    margin: auto;
+}
+
+.options .vs{
+    height: 32px;
+    width: 32px;
+}
+
+.options .pkmn.card{
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    vertical-align: middle;
+}
+.data-pkmn{
+    align-items: flex-start;
+    display: flex;
+    flex-direction: column;
+    padding: .7rem;
+    justify-content:space-around;
+}
+.data-pkmn .hp-bar{
+    display: block;
+    height: .4rem;
+    width: 100%;
+    border-radius: 5px;
+    background-color:var(--gris-claro);
+    margin: 5px 0;
+}
+.data-pkmn #pokemon-seleccionado{ 
+    line-height: 1.5;
+    text-transform: capitalize;
+    font-weight: bold;
+    margin-bottom: 2rem;
+    display: inline-block;
+}
+
+.moves{
+    text-align: center;
+}
+.moves .ataques{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+}
+
 
 /* Media Queries */
 @media (min-width: 768px) {
@@ -291,8 +415,8 @@ footer {
     }
 
     .margin-y {
-        margin-bottom: 2.5rem;
-        margin-top: 2.5rem;
+        margin-bottom: var(--margin-large);
+        margin-top: var(--margin-large);
     }
 
     header {
@@ -322,12 +446,18 @@ footer {
         padding: 0;
         width: auto;
     }
+    .menu-items a{
+        font-size: medium;
+    }
 
     .autor_card {
         flex-direction: row;
     }
 
     .pokemon-card {
-        width: 200px;
+        width: var(--card-width-large);
+    }
+    .options, .options .pkmn.card{
+        flex-direction: row;
     }
 }
