--- a/styles.css
+++ b/styles.css
@@ -175,6 +175,8 @@ footer {
     font-size: var(--font-size-medium);
     font-weight: bold;
     text-align: center;
+    margin-bottom: 2rem;
+    display: block;    
 }
 
 /* Titles */
@@ -231,7 +233,7 @@ footer {
     border: 5px solid var(--gris-claro);
     border-radius: var(--radius);
     cursor: pointer;
-    padding: .8rem 1.2rem;
+    padding: .4rem .8rem;
 
     transition: all ease .3s;
 }
@@ -353,14 +355,16 @@ footer {
     align-items: center;
     display: flex;
     flex-direction: row;
-    justify-content:stretch;
-    gap: 1rem;
+    justify-content:center;
+    gap: .41rem;
     margin: auto;
 }
 
 .options .vs{
     height: 32px;
     width: 32px;
+
+    display: none;
 }
 
 .options .pkmn.card{
@@ -456,6 +460,9 @@ footer {
 
     .autor_card {
         flex-direction: row;
+    }
+    .options .vs{
+        display: inline-block;
     }
 
     .pokemon-card {
