--- a/styles.css
+++ b/styles.css
@@ -382,7 +382,7 @@ footer {
     height: .4rem;
     width: 100%;
     border-radius: 5px;
-    background-color:var(--gris-claro);
+    background-color:var(--gris-oscuro);
     margin: 5px 0;
 }
 .hp-bar{
