--- a/styles.css
+++ b/styles.css
@@ -205,18 +205,29 @@ footer {
     border-radius: var(--radius);
     color: var(--blanco);
     cursor: pointer;
-    display: block;
-    font-weight: bold;
+    display: inline-block;
     gap: 10px;
     font-size: var(--font-size-medium);
     justify-content: center;
     margin: 1rem auto;
-    padding: 1rem 1.6rem;
-    width: fit-content;
+    padding: 1rem 1.6rem; 
     transition: all 0.2s ease-out;
+    text-transform: capitalize;
     white-space: nowrap;
-}
+    position: relative;
+    width: -webkit-fill-available;
+    width: fill-available;
 
+}
+.btn::after{
+    position: absolute;
+    top:0;
+    right:0;
+    bottom:0;
+    left: 0;
+    content: "";
+    box-shadow: inset -5px -5px #7d878d4a;
+}
 .btn:hover {
     filter: brightness(0.85);
 }
@@ -408,8 +419,12 @@ footer {
 .battle-log{
     border: 5px solid var(--gris-claro);
     margin-bottom: 2rem;
-    height: 150px;
+    line-height: 1.8;
+    height: 160px;
     overflow-y: scroll;
+    padding: .5rem;
+    padding-bottom: 1.1rem;
+    display: block;
 }
 .moves{
     text-align: center;
@@ -417,8 +432,7 @@ footer {
 .moves .ataques{
     align-items: center;
     display: flex;
-    justify-content: center;
-    gap: 2rem;
+    justify-content: center;    
 }
 
 
@@ -484,5 +498,8 @@ footer {
     }
     .options, .options .pkmn.card{
         flex-direction: row;
+    }
+    .moves .ataques{
+        gap: 2rem;
     }
 }
