--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@ body {
     font-size: var(--font-size-base);
     font-style: normal;
     font-weight: 400;
+    line-height: 1.7;
     margin: 0;
 }
 
