--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@
     --font-size-small: 0.7rem;
 
     /* Tamaños y Espacios */
-    --radius: 5px;
+    --radius: 10px;
     --padding-base: 1rem;
     --margin-base: 1.5rem;
     --margin-large: 2.5rem;
@@ -83,11 +83,11 @@ body {
 /* Header */
 header {
     background-color: var(--blanco);
-    bottom: 0;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    bottom: 0;    
     padding: 0.5rem 1rem;
     position: fixed;
     width: 100%;
+    z-index: 3;
 }
 
 /* Menu */
@@ -177,6 +177,7 @@ main {
     display: block;
     margin: 1rem auto;
     padding: 1rem 1rem;
+    border-radius: calc(var(--radius) * 2);
 }
 
 main>div {
@@ -239,6 +240,7 @@ footer {
     bottom:0;
     left: 0;
     content: "";
+    border-radius: var(--radius);
     box-shadow: inset -5px -5px #7d878d4a;
 }
 .btn:hover {
@@ -383,25 +385,29 @@ footer {
     margin: 0;
 }
 
-.marcador {
-    border: var(--gris-oscuro) solid var(--radius);
+.marcador {    
     display: flex;
     gap: 1rem;
     justify-content: space-between;
-    padding: .8rem  2rem;
-    text-align: center;
-    margin-bottom: 1rem;
+    padding: 1rem 0;
+    text-align: center; 
 }
-.marcador_item{
+.marcador_item {
     font-size: var(--font-size-large);
     color: var(--negro);
     font-weight: bold;
     line-height: 0;
 }
-.marcador_item-trofeo{
+.marcador_item span{
+    line-height: 0;
+    font-size: inherit;
+}
+.marcador_item-trofeo {
     color: #FFC107;
 }
-
+.marcador_item-wins {
+    color:var(--negro);
+}
 .options{
     align-items: center;
     display: flex;
@@ -410,9 +416,8 @@ footer {
     gap: .41rem;
     margin: auto;
 }
- 
 
-.options .pkmn.card{
+.options_pkmnCard{
     display: flex;
     flex: 1;
     flex-direction: column;
@@ -547,10 +552,17 @@ footer {
 
     .autor_card {
         flex-direction: row;
-    } 
-    .pokemon-card {
+    }
+    .options_pkmnCard{
         width: var(--card-width-large);
-    } 
+        flex-direction: row;
+    }
+    .options_pkmnCard:first-child{
+        flex-direction: row-reverse;
+    }
+    .options_pkmnCard>img{
+        max-width: 180px;
+    }    
     .moves_ataques{
         gap: 2rem;
     }
